--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       var snakeBody = {
         width:20,
         height:20,
-        color:'green'
+        color:'blue'
       };
 
       var food = {
