--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       ctx.fillText("Click me to start the game",140,250);
 
       var snakeBody = {
-        width:20,
+        width:40,
         height:20,
         color:'blue'
       };
 
       var food = {
-        width:20,
-        height:20,
-        color:'orange'
+        width:100,
+        height:100,
+        color:'grey'
       };
 
       document.getElementById('ctx').onmousedown = function() {
